Fix bug with replies Stretch timeline a bit limit preview of body in annotation grid to single line

--- a/content/loreui.css
+++ b/content/loreui.css
@@ -189,6 +189,9 @@
 .newanno td {
 	color: red !important;
 }
+.x-grid3-col-3 {
+	height: 1em;
+}
 #annotimeline{
 	height:100%;
 	width:100%;
